public/styles/main.css
@property --initial-gradient-start-color {
    syntax: "<color>";
    inherits: true;
    initial-value: #4bf19e;
}

@property --initial-gradient-end-color {
    syntax: "<color>";
    inherits: true;
    initial-value: #27b4db;
}

@property --flash-color {
    syntax: "<color>";
    inherits: true;
    initial-value: #ff0000;
}

@property --gradient-start-color {
    syntax: "<color>";
    inherits: true;
    initial-value: #7bdaaa;
}

@property --gradient-end-color {
    syntax: "<color>";
    inherits: true;
    initial-value: #229ec0;
}

@keyframes flashBG {
    0% {
        --gradient-start-color: var(--flash-color);
        --gradient-end-color: var(--flash-color);
    }
    10% {
        --gradient-start-color: var(--flash-color);
        --gradient-end-color: var(--flash-color);
    }
    100% {
        --gradient-start-color: var(--initial-gradient-start-color);
        --gradient-end-color: var(--initial-gradient-end-color);
    }
}

@keyframes flashTextInput {
    0% {
        background-color: var(--flash-color);
    }
    10% {
        background-color: var(--flash-color);
    }
    100% {
        background-color: #ffffff;
    }
}

* {
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    list-style: none;
    box-sizing: border-box;
}

.bolded {
    font-weight: bold;
}

.italicized {
    font-style: italic;
}

.underlined {
    text-decoration: underline;
}

:root {
    --gradient-midpoint: 50%;

    --custom-words-settings-visibility: none; /* set to flex when enabling */

    --gameplay-visibility: none; /* set to flex when enabling */
    --prompt-info-visibility: block;
    --guess-entry-visibility: none; /* set to block when enabling */
    --waiting-visibility: none;
    --winner-visibility: none;
    --start-game-button-visibility: none;
}

.flash-bg {
    animation: flashBG 0.67s;
}

.flash-text-input {
    animation: flashTextInput 0.67s;
}

input[type="text"] {
    appearance: none;
    -webkit-appearance: none;
    box-shadow: none;
}

.page-body {
    margin-top: 67px;
    background: linear-gradient(to right, var(--gradient-start-color), var(--gradient-end-color) var(--gradient-midpoint));
}

footer {
    padding-bottom: 5%;
}

h1 {
    font-size: 35pt;
}

.center-aligned-item {
    display: block;
    text-align: center;
}

.center-aligned-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
}

#room-settings {
    display: flex;
    flex-direction: column;
    margin: 0 auto;
    align-items: center;
    width: 320px;
    gap: 15px;
}

#custom-words-settings {
    display: var(--custom-words-settings-visibility);
    gap: 15px;
}

#bonus-alphabet-checkboxes-container {
    display: flex;
    flex-direction: row;
    justify-content: center;
    flex-wrap: wrap;
    gap: 5px;
}

#join-room-button {
    flex-shrink: 0;
}

#active-rooms {
    padding-top: 40px;
}

.number-input {
    width: 28px;
}

.room-code-info {
    flex-shrink: 0;

    margin-top: 12px;
    margin-bottom: 12px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    width: 200%;
    gap: 20px;
}

.green-text {
    cursor: pointer;
    font-weight: bold;
    color: rgb(0, 63, 0);
}

#gameplay {
    display: var(--gameplay-visibility);
    flex-direction: column;
    gap: 20px;
}

#prompt-info-container {
    display: var(--prompt-info-visibility);
}

#submit-guess {
    display: var(--guess-entry-visibility);
}

#waiting-for-player {
    display: var(--waiting-visibility);
}

#winner {
    display: var(--winner-visibility);
    font-size: larger;
}

#player-info-container {
    font-size: 22pt;
}

#player-info-container li {
    font-size: 19pt;
}

#bonus-alphabet-container {
    background-color: rgba(0, 0, 0, 0.438);

    position: fixed;
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    gap: 5px;

    justify-content: center;
    align-items: center;
    text-align: center;
    top: 0%;
    right: 0%;
    height: 100%;
    z-index: 999;

}

.obtained-letter, .unobtained-letter {
    font-size: 36pt;
}

#start-game {
    display: var(--start-game-button-visibility);
}

